syntax = "proto3";

package com.github.joaolucasl.chumlee;

service DiscountService {
    rpc GetDiscount (DiscountRequest) returns (DiscountResponse) {}
}

message DiscountRequest {
    string user_id = 1;
    repeated Product products = 2;
}

message Product {
    string id = 1;
}

message DiscountResponse {
    repeated ProductDiscount products = 1;
}

message ProductDiscount {
    float discount = 1;
    int32 amount = 2;
}
